--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-VITE_KAKAO_AUTH_URL=https://kauth.kakao.com/oauth/authorize?client_id=93ab05d9acf3c0f96c653aaedf6d608d&redirect_uri=https://kernelletter.p-e.kr/auth/kakao/callback&response_type=code
-VITE_API_BASE_URL=https://kernelletter.p-e.kr
+#VITE_KAKAO_AUTH_URL=https://kauth.kakao.com/oauth/authorize?client_id=93ab05d9acf3c0f96c653aaedf6d608d&redirect_uri=https://kernelletter.p-e.kr/auth/kakao/callback&response_type=code
+VITE_KAKAO_AUTH_URL=https://kauth.kakao.com/oauth/authorize?client_id=93ab05d9acf3c0f96c653aaedf6d608d&redirect_uri=http://localhost:8080/auth/kakao/callback&response_type=code
+#VITE_API_BASE_URL=https://kernelletter.p-e.kr
+VITE_API_BASE_URL=localhost:8080
